# edgebreaker

./: CMakeLists.txt  Makefile  Makefile.config  README  README.md
.github/workflows/: ci.yml
cmake/: Sanitizers.cmake
data/: meng_report_example_1.off  meng_report_example_2.off  meng_report_example_3.off  meng_report_example_4.off
doc/: Circ_list.hpp  Context_selector.hpp  Makefile  Utility.hpp  decoder.hpp  encoder.hpp  fig_compres.eps  fig_decompres.eps  fig_ebfile.eps  fig_init_boundary.eps  fig_parallel.eps  fig_typeM_boundary.eps  main.tex
src/: CMakeLists.txt  Circ_list.hpp  Circ_list_impl.hpp  Context_selector.cpp  Context_selector.hpp  Makefile  My_stack.hpp  My_stack_impl.hpp  README  Utility.cpp  Utility.hpp  decode_mesh.cpp  decoder.cpp  decoder.hpp  encode_mesh.cpp  encoder.cpp  encoder.hpp  mesh_clean.cpp
